force-app/main/default/objects/PayItem__c/PayItem__c.object-meta.xml
<CustomObject>
    <label>PayItem</label>
    <nameField>
        <displayFormat>PI-{0000000}</displayFormat>
        <label>PayItem No</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>PayItem</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>