force-app/main/default/objects/PayItem__c/fields/No_of_Days__c.field-meta.xml
<CustomField>
    <fullName>No_of_Days__c</fullName>
    <label>No. of Days</label>
    <precision>3</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>