force-app/main/default/objects/PayItem__c/fields/Payitem__c.field-meta.xml
<CustomField>
    <fullName>Payitem__c</fullName>
    <label>Payitem</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Payitem_Master__c.Active__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Payitem_Master__c</referenceTo>
    <relationshipLabel>PayItem</relationshipLabel>
    <relationshipName>Payitems</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>