force-app/main/default/objects/PayItem__c/fields/Payitem_Name__c.field-meta.xml
<CustomField>
    <fullName>Payitem_Name__c</fullName>
    <label>Payitem Name</label>
    <length>80</length>
    <type>Text</type>
</CustomField>