force-app/main/default/objects/PayItem__c/fields/Payout__c.field-meta.xml
<CustomField>
    <fullName>Payout__c</fullName>
    <label>Payout</label>
    <referenceTo>Payout__c</referenceTo>
    <relationshipLabel>PayItem</relationshipLabel>
    <relationshipName>PayItems</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>