force-app/main/default/objects/PayItem__c/fields/Prorate__c.field-meta.xml
<CustomField>
    <fullName>Prorate__c</fullName>
    <label>Prorate</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>