force-app/main/default/objects/PayItem__c/fields/System_Generated__c.field-meta.xml
<CustomField>
    <fullName>System_Generated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>System Generated</label>
    <type>Checkbox</type>
</CustomField>