force-app/main/default/objects/PayItem__c/recordTypes/One_Time.recordType-meta.xml
<RecordType>
    <fullName>One_Time</fullName>
    <active>true</active>
    <label>One Time</label>
</RecordType>