force-app/main/default/objects/PayItem__c/recordTypes/Recurring.recordType-meta.xml
<RecordType>
    <fullName>Recurring</fullName>
    <active>false</active>
    <label>Recurring</label>
</RecordType>