force-app/main/default/objects/PayItem__c/validationRules/Value_must_be_greater_than_0.validationRule-meta.xml
<ValidationRule>
    <fullName>Value_must_be_greater_than_0</fullName>
    <active>true</active>
    <errorConditionFormula>Value__c&lt;=0</errorConditionFormula>
    <errorDisplayField>Value__c</errorDisplayField>
    <errorMessage>Incorrect value.</errorMessage>
</ValidationRule>